--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
   </div>
 
   <script src="script.js"></script>
+  <footer>
+    <p>&copy; 2025 Your Company. All rights reserved.</p>
+  </footer>
 </body>
 </html>
