--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Percentage Calculator</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  <div class="container">
-    <div class="calculator">
-      <h2>Percentage Calculator</h2>
-      <input type="number" id="percentage" placeholder="Percentage (%)"><br>
-      <input type="number" id="total" placeholder="Total Number"><br>
-      <button onclick="calculatePercentage()">Calculate</button>
-      <div id="result"></div>
-    </div>
-
-    <footer>
-      <p>&copy; 2025 Your Company. All rights reserved.</p>
-    </footer>
+  <div class="calculator">
+    <h2>Percentage Calculator</h2>
+    <input type="number" id="percentage" placeholder="Percentage (%)"><br>
+    <input type="number" id="total" placeholder="Total Number"><br>
+    <button onclick="calculatePercentage()">Calculate</button>
+    <div id="result"></div>
   </div>
 
   <script src="script.js"></script>
 </body>
+</html>
