--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <input type="number" id="total" placeholder="Total Number"><br>
     <button onclick="calculatePercentage()">Calculate</button>
     <div id="result"></div>
+    <div class="made-by">Made with ❤️ by Md Anas Saifi</div>
+    </div>
   </div>
 
   <script src="script.js"></script>
