--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
 </head>
 <body>
   <div class="calculator">
-    <h2>Percentage Calculator</h2>
-    <input type="number" id="percentage" placeholder="Percentage (%)"><br>
-    <input type="number" id="total" placeholder="Total Number"><br>
-    <button onclick="calculatePercentage()">Calculate</button>
+    <h2>📊 Percentage Calculator</h2>
+    <input type="number" id="percentage" placeholder="Enter Percentage (%)"><br>
+    <input type="number" id="total" placeholder="Enter Total Amount"><br>
+    <button onclick="calculatePercentage()">✅ Calculate</button>
     <div id="result"></div>
-    <br>
     <div class="made-by">Made with ❤️ by Md Anas Saifi</div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
